<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_container_status"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context="com.enyteam.abc.smartkitchen.activity.ContainerStatusActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/no_container_registered"
        android:textColor="#BDBDBD"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:id="@+id/no_device_registered_placehold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/error_fetching_data"
        android:textColor="#BDBDBD"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:id="@+id/error_placehold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_container"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10px"
            android:id="@+id/progressBar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetch_data"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:id="@+id/container_detail_view">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="5dp"
            android:divider="@android:color/transparent"
            android:layout_margin="5dp"
            android:id="@+id/container_info">
        </ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:weightSum="10"
        android:background="#E6E6E6"
        android:layout_below="@id/container_detail_view"
        android:id="@+id/order_and_refresh_button_view">
        <Button
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:text="@string/refresh_btn"
            android:layout_gravity="center_vertical"
            android:background="@drawable/round_button"
            android:layout_marginRight="20dp"
            android:id="@+id/bt_refresh" />
        <Button
            android:layout_weight="5"
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/round_button"
            android:text="@string/order_button"
            android:id="@+id/bt_order"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#E6E6E6"
        android:layout_below="@id/container_detail_view"
        android:id="@+id/container_register_view">
        <Button
            android:layout_height="40dp"
            android:layout_width="180dp"
            android:text="@string/register_button"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:layout_marginRight="20dp"
            android:id="@+id/bt_register_device" />
    </LinearLayout>
</RelativeLayout>
