<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#088A68"
    tools:context="com.enyteam.abc.smartkitchen.activity.RegistrationActivity">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/smart_logo_"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/logo_container"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo_container"
        android:id="@+id/login_container">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:animateLayoutChanges="true"
            android:id="@+id/customer_info_view">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_edittext"
                android:hint="@string/prefered_name"
                android:paddingLeft="15dp"
                android:textSize="18sp"
                android:id="@+id/et_prefered_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_edittext"
                android:paddingLeft="15dp"
                android:textSize="18sp"
                android:hint="@string/preferred_address"
                android:id="@+id/et_preferred_address"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_edittext"
                android:paddingLeft="15dp"
                android:textSize="18sp"
                android:hint="@string/eny_device_token"
                android:id="@+id/et_eny_reg_key"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_edittext"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:hint="@string/user_name"
            android:drawableRight="@drawable/username"
            android:textSize="18sp"
            android:id="@+id/et_username"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/round_edittext"
            android:textSize="18sp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:hint="@string/pass_word"
            android:inputType="textPassword"
            android:drawableRight="@drawable/password"
            android:id="@+id/et_password"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="REGISTER"
                android:padding="10dp"
                android:id="@+id/bt_register"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="LOGIN"
                android:padding="10dp"
                android:id="@+id/bt_login"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register as a new Customer."
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:tag="login"
            android:textSize="15sp"
            android:id="@+id/login_register_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_container"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="invisible">
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10px"
            android:id="@+id/progressBar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth"
            android:gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>
